src/scss/pages/_about.scss
.about-header { @extend .centered; }

.about-title {
	font-size: 1.4rem;
	margin: .7rem 0 0;
	color: $color-text-light;

	&::before { content: "Oz Pinhas"; }
}
.about-subtitle { margin: 0; }

.about-job {
	width: 26.2em;
	margin: 1rem auto;

	.meta {
		width: 5.1em;
		vertical-align: top;
		margin-top: .1em;
	}
	dd { width: 17rem; }
}
.previously { text-decoration: line-through; }

// Ring
.about-image {
	position: relative;
	width: 109px;
	height: 109px;
}
.about-image-ring {
	position: absolute;
	@extend %fullsize;
	border-radius: 100%;
	border: 2px solid $color-main;
	@include borderbox();
	z-index: -1;
	@include transition-with-transform(opacity, $duration-slow $easing-cubic);

	&.ping {
		@include transform(scale(1.35));
		opacity: 0;
	}
}

/* ======= Contact Links ======= */
.contact-item {
	&:not(:first-child) { margin-left: 68px; }
}
.contact-link {
	@extend %sprited;
	@include text-replacement();
}
$i: 0;
@each $item in email, twitter, dribbble, github, linkedin {
	.contact-link-#{$item} { background-position: $i * $size-ui-sprite * -1 0; }
	
	$i: $i + 1;
}

